objects/SurveyQuestionMapping__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuestionID__c</fullName>
        <description>Feed Outbound -</description>
        <formula>Question__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QuestionID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionText__c</fullName>
        <formula>Question__r.Question__c</formula>
        <label>QuestionText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Sequence__c</fullName>
        <label>Question Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>SurveyQuestionMapping</relationshipLabel>
        <relationshipName>SurveyQuestionMapping</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Starting_Question__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Starting Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Survey Question Mapping</relationshipLabel>
        <relationshipName>SurveyQuestionMapping</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Survey Question Mapping</label>
    <nameField>
        <displayFormat>SQM-{0000}</displayFormat>
        <label>SurveyQuestionMappingId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SurveyQuestionMapping</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>